--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "chess.js": "^0.10.2",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "lwip": "0.0.9"
   }
 }
