--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.4.1",
     "chess.js": "^0.10.2",
     "lodash": "^4.13.1",
-    "lwip": "0.0.9"
+    "lwip": "0.0.9",
+    "node-correlation": "^1.0.2"
   }
 }
