--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "classifier": "gulp classifier"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "bluebird": "^3.4.1",
     "chess.js": "^0.10.2",
     "gm": "^1.22.0",
+    "gulp": "^3.9.1",
     "lodash": "^4.13.1",
     "lwip": "0.0.9",
     "node-correlation": "^1.0.2"
